[project]
name = "aitry001"
version = "0.1.0"
description = "GitHub Agent using LangChain with GitHub Copilot"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.1",
    "openai>=1.3.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]
